# motorcontrol

./: CMakeLists.txt  listOfKnownMotorPVs.txt  motorcontrol.pro
DesignerPlugins/: DesignerPlugins.pro  icons.qrc  motorcontroldesigner.cpp  motorcontroldesigner.h  motorstackdesigner.cpp  motorstackdesigner.h  motorstackdesigner.pri  motorstackdesignerplugin.cpp  motorstackdesignerplugin.h  qcamotordesigner.cpp  qcamotordesigner.h  qcamotordesigner.pri  qcamotordesignerplugin.cpp  qcamotordesignerplugin.h
motorConfigs/: 1B.motormxLoadMe  2bCT.motorConfig  2b_CT_15.Jul  3B CT motors.list  3b-ct-full-start  AllSlits_2020_06_24.motors.sh  MRT sample fine X - 12F.motorConfig  MRT sample motors  Mode_1.5.motorConfig  NewCTstack_2020_06_24.motors.sh  all_slits.list  some.list
motormx/: CMakeLists.txt  Motor.desktop  MotorControl.desktop  MotorControl.desktop.in  mainwindow.cpp  mainwindow.h  mainwindow.ui  motormx.cpp  motormx.h  motormx.pro  motormx.qrc  motormx.ui  motormx_mainwindow.cpp  motormx_mainwindow.h  motormx_mainwindow.ui
motorstack/: interbutt.cpp  interbutt.h  interbutt.ui  motorstack.pro  motorstack.ui  qmotorstack.cpp  qmotorstack.h  ui_motorstack.h
motorstack/stacks/: 1B.list
motorstack_py/: motorstack_py.pro  qmotorstack.sip  sipAPIqmotorstack.h  sipqmotorstackQList0101QCaMotorGUI.cpp  sipqmotorstackcmodule.cpp
pqcamotor/: .bash_history_pwd  pqcamotor.pro  pqcamotor.sip  sipAPIqcamotor.h  sipqcamotorQCaMotor.cpp
qcamotor/: CMakeLists.txt  qcamotor.cpp  qcamotor.h  qcamotor.pro
qcamotor_py/: CMakeLists.txt  Makefile  configure.py  pyqcamotor.sip  qcamotor.sip  qcamotor_py.pro  sipAPIpyqcamotor.h  sipAPIqcamotor.h  sippyqcamotorQCaMotor.cpp  sippyqcamotorcmodule.cpp  sipqcamotorQCaMotor.cpp  sipqcamotorcmodule.cpp
qcamotorgui/: CMakeLists.txt  listOfKnownMotorPVs.txt  qcamotorgui-additional.cpp  qcamotorgui-additional.h  qcamotorgui-local.h  qcamotorgui-pv.ui  qcamotorgui-relative.ui  qcamotorgui-setup.ui  qcamotorgui.cpp  qcamotorgui.h  qcamotorgui.pro  qcamotorgui.ui  ui_qcamotorgui-pv.h  ui_qcamotorgui-relative.h  ui_qcamotorgui-setup.h  ui_qcamotorgui.h
qcamotorgui_py/: CMakeLists.txt  Makefile  pyqcamotorgui.sip  qcamotorgui.sip  qcamotorgui_py.pro  sipAPIpyqcamotorgui.h  sipAPIqcamotorgui.h  sippyqcamotorguiQCaMotorGUI.cpp  sippyqcamotorguicmodule.cpp  sipqcamotorguiQCaMotorGUI.cpp  sipqcamotorguicmodule.cpp
qmotorstack/: CMakeLists.txt  qmotorstack.cpp  qmotorstack.h  qmotorstack.pro  qmotorstack.ui
qmotorstack_py/: CMakeLists.txt  pyqmotorstack.sip  qmotorstack.sip  qmotorstack_py.pro  sipAPIpyqmotorstack.h  sippyqmotorstackQList0101QCaMotor.cpp  sippyqmotorstackQList0101QCaMotorGUI.cpp  sippyqmotorstackQMotorStack.cpp  sippyqmotorstackcmodule.cpp  sipqmotorstackQList0101QCaMotor.cpp  sipqmotorstackQMotorStack.cpp
scripts/: AllMotorPVs.sh  PrintMotor.sh  PrintMotorSubst.sh  WaitMotorsUp.sh
